--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,59 @@
+/* Container for absolute positioned elements */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Lufga&family=ABeeZee&display=swap');
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+    --background: #ffffff;
+    --foreground: #171717;
+  }
+
 
 @media (prefers-color-scheme: dark) {
-  :root {
+:root {
     --background: #0a0a0a;
     --foreground: #ededed;
-  }
+}
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    color: var(--foreground);
+    background: var(--background);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
 }
+
+.background-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  }
+  
+  /* First Vector */
+  .vector-one {
+    position: absolute;
+    width: 50vw; /* Adjust to relative width */
+    height: 50vh; /* Adjust to relative height */
+    left: 60vw;   /* Adjust based on percentage */
+    top: 70vh;    /* Adjust based on percentage */
+    background: rgba(255, 234, 148, 0.17);
+    transform: rotate(-35.55deg);
+  }
+  
+  /* Second Vector */
+  .vector-two {
+    position: absolute;
+    width: 50vw; /* Adjust to relative width */
+    height: 50vh; /* Adjust to relative height */
+    left: -10vw;  /* Adjust based on percentage */
+    top: -30vh;   /* Adjust based on percentage */
+    background: rgba(254, 167, 222, 0.11);
+  }
+  
